# name: test_setup_of_from_message_converter
  dict({
    'action_mapping': dict({
      0: 0,
      1: 1,
      2: 2,
      3: 3,
      4: 4,
      5: 5,
      6: 6,
      7: 7,
    }),
    'role_mapping': dict({
      0: 0,
      1: 1,
      2: 2,
      3: 3,
      4: 4,
      5: 5,
      6: 6,
    }),
    'side_mapping': dict({
      0: 0,
      1: 1,
      2: 2,
      3: 3,
    }),
    'team_mapping': dict({
      0: 1,
      1: 3,
      2: 2,
    }),
  })
# ---
# name: test_setup_of_mappings
  tuple(
    tuple(
      0,
      0,
    ),
    tuple(
      1,
      1,
    ),
    tuple(
      2,
      2,
    ),
    tuple(
      3,
      3,
    ),
    tuple(
      4,
      4,
    ),
    tuple(
      5,
      5,
    ),
    tuple(
      6,
      6,
    ),
  )
# ---
# name: test_setup_of_mappings.1
  tuple(
    tuple(
      0,
      0,
    ),
    tuple(
      1,
      1,
    ),
    tuple(
      2,
      2,
    ),
    tuple(
      3,
      3,
    ),
    tuple(
      4,
      4,
    ),
    tuple(
      5,
      5,
    ),
    tuple(
      6,
      6,
    ),
    tuple(
      7,
      7,
    ),
  )
# ---
# name: test_setup_of_mappings.2
  tuple(
    tuple(
      0,
      0,
    ),
    tuple(
      1,
      1,
    ),
    tuple(
      2,
      2,
    ),
    tuple(
      3,
      3,
    ),
  )
# ---
# name: test_setup_of_team_color_mapping
  dict({
    0: 1,
    1: 3,
    2: 2,
  })
# ---
# name: test_setup_of_to_message_converter
  dict({
    'action_mapping': dict({
      0: 0,
      1: 1,
      2: 2,
      3: 3,
      4: 4,
      5: 5,
      6: 6,
      7: 7,
    }),
    'role_mapping': dict({
      0: 0,
      1: 1,
      2: 2,
      3: 3,
      4: 4,
      5: 5,
      6: 6,
    }),
    'side_mapping': dict({
      0: 0,
      1: 1,
      2: 2,
      3: 3,
    }),
    'team_mapping': dict({
      0: 0,
      1: 1,
      2: 2,
    }),
  })
# ---
